# FoodpiaMicroservice

./: .gitignore  README.md
backend/: .env  .gitignore  docker-compose-infrastracture.yml  docker-compose-infrastructure.yml  docker-compose.agent.yml  docker-compose.customer.yml  docker-compose.meal.yml  docker-compose.scheduling.yml  docker-compose.yml  pom.xml
backend/agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/agent/src/foodopia_agent/: config.py  main.py
backend/agent/src/foodopia_agent/agents/: guard.py
backend/agent/src/foodopia_agent/clients/: __init__.py  mcp.py
backend/agent/src/foodopia_agent/exceptions/: __init__.py  guard.py  mcp.py
backend/agent/src/foodopia_agent/graphs/: __init__.py  meal_recommendation_graph.py
backend/agent/src/foodopia_agent/graphs/nodes/: guard.py  meal_recommendation.py
backend/agent/src/foodopia_agent/routers/: recommendation.py
backend/agent/src/foodopia_agent/schemas/: __init__.py  common.py  customer.py  guard.py  meal.py  recommendation.py  subscription.py
backend/agent/src/foodopia_agent/services/: __init__.py  dish_selection.py
backend/agent/src/foodopia_agent/state/: __init__.py  meal_recommendation_state.py
backend/agent/src/foodopia_agent/tools/: __init__.py  mcp_tools.py
backend/agent/tests/: conftest.py  test_dish_selection.py  test_guard_agent.py  test_health.py  test_mcp_client.py  test_mcp_tools.py  test_meal_recommendation_graph.py
doc/: Foodopia Microservice Refactoring.md  Foodopia Use Case 1.docx  Foodopia Use Case 2.docx  (+4 more)
(+217 files in other folders)
